--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: 'postgres:16.3'
+    image: 'postgres:latest'
     container_name: vroomdb
     environment:
       - 'POSTGRES_DB=vroom'
@@ -8,3 +8,14 @@ services:
       - 'POSTGRES_USER=postgres'
     ports:
       - '5432:5432'
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: vroomadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - '15432:80'
+    depends_on:
+      - postgres
