feat: add Dockerfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.flyway.enabled=true
 spring.flyway.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.flyway.user=${DB_USER}
 spring.flyway.password=${DB_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.profiles.active=prod
